src/test/ui/const-fn-not-in-trait.stderr
error[E0379]: trait fns cannot be declared const
  --> $DIR/const-fn-not-in-trait.rs:17:5
   |
17 |     const fn f() -> u32;
   |     ^^^^^ trait fns cannot be const

error[E0379]: trait fns cannot be declared const
  --> $DIR/const-fn-not-in-trait.rs:19:5
   |
19 |     const fn g() -> u32 { 0 }
   |     ^^^^^ trait fns cannot be const

error: aborting due to 2 previous errors

